--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,12 +18,11 @@ html {
 
 .body {
   background-color: #121c1e;
-  font-size: 40px;
   font-family: 'Steppe';
   color: #fff;
   min-height: 100vh;
   display: grid;
-  grid-template-rows: 70px 1fr 70px;
+  grid-template-rows: 70px 1fr 50px;
 }
 
 .container {
@@ -33,8 +32,7 @@ html {
 
 /*header start*/
 
-.header-wrap,
-.footer-wrap {
+.header-wrap {
   width: 100%;
   min-height: 70px;
   display: flex;
@@ -44,9 +42,21 @@ html {
 }
 
 .header-title {
-  margin-left: 300px;
+  margin-left: 10px;
   margin-top: 5px;
   color: #278d9f;
+  /* color: rgb(246, 62, 62); */
+  font-size: 40px;
+}
+
+.header-banner {
+  padding: 10px;
+  background-color: rgba(31, 112, 127, 1);
+  transform: rotate(2deg);
+}
+
+.sun {
+  font-size: 24px;
 }
 
 .github-link:hover {
@@ -102,32 +112,33 @@ html {
 
 .toy-icon {
   position: relative;
-  width: 48px;
+  width: 88px;
   height: 60px;
-  /* background-image: url(./assets/svg/ball-2.svg); */
-  /* background-size: 48px 60px;
-  background-position: left -8px;
-  background-repeat: no-repeat; */
   transition: 0.3s;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .toy-counter {
-  position: absolute;
+  position: relative;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
   text-align: center;
 
-  line-height: 45px;
+  line-height: 40px;
   font-size: 20px;
 
+  border-radius: 50%;
   background: radial-gradient(118.88% 606.86% at 0% 0%, rgba(36, 197, 219, 0.15) 0%, rgba(36, 197, 219, 0) 100%);
   backdrop-filter: blur(31px);
   color: #fff;
   transition: background 1s;
+
+  /* background-image: url('../icons/basket1.png');
+  background-size: 40px 40px; */
+  /* background-position: left -8px; */
+  /* background-repeat: no-repeat; */
 }
 
 .toy-counter-alert {
@@ -135,16 +146,39 @@ html {
   transition: background-color 1s;
 }
 
+.toy-counter-alert::after {
+  content: 'Не более 20 товаров!';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 20px;
+  left: -200px;
+  width: 200px;
+  height: 30px;
+  background: #278d9f;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #fff;
+  z-index: 10;
+}
+
+.toy-basket:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  transition: all 0.3s;
+}
+
 /*header end*/
 
 /*main styles start*/
 
-.block-toys {
+.main {
   background-color: #192f2d;
 }
 
 .t-container {
-  height: calc(100vh - 140px);
+  height: calc(100vh - 120px);
   display: flex;
 }
 
@@ -182,7 +216,8 @@ html {
 .sort-select {
   margin-left: 20px;
   text-align: center;
-  padding: 5px;
+  padding: 7px;
+
   background: radial-gradient(118.88% 606.86% at 0% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(157, 243, 255, 0.2) 100%);
   backdrop-filter: blur(31px);
   border: 0;
@@ -526,7 +561,8 @@ html {
 .toy-card-item-elect::after {
   content: '';
   position: absolute;
-  background-image: url('../icons/star.png');
+  /* background-image: url('../icons/star.png'); */
+  background-image: url('../icons/basket1.png');
   background-size: 20px 20px;
   background-repeat: no-repeat;
   width: 20px;
@@ -568,12 +604,24 @@ html {
 
 /*footer start*/
 
+.footer {
+  padding: 10px;
+}
+
+.footer-wrap {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background: blueviolet; */
+}
+
 .footer-info {
   width: 150px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .github-link,
