--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,6 +23,7 @@ html {
   min-height: 100vh;
   display: grid;
   grid-template-rows: 70px 1fr 50px;
+  /* grid-template-rows: 70px auto 50px; */
 }
 
 .container {
@@ -44,7 +45,7 @@ html {
 .header-title {
   margin-left: 10px;
   margin-top: 5px;
-  color: #278d9f;
+  color: #ffc107;
   /* color: rgb(246, 62, 62); */
   font-size: 40px;
 }
@@ -179,11 +180,14 @@ html {
 
 .t-container {
   height: calc(100vh - 120px);
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: 480px 1120px;
 }
 
 .filters {
-  width: 30%;
+  /* width: 30%; */
+  width: 100%;
   height: 100%;
   /* background-color: rgba(155, 155, 255, 0.2); */
 }
@@ -464,7 +468,7 @@ html {
 }
 
 .setting-buttons {
-  height: 70px;
+  /* height: 70px; */
   padding-left: 130px;
   padding-top: 30px;
   /* display: flex;
@@ -506,8 +510,10 @@ html {
 
 .toy-cards {
   position: relative;
-  width: 70%;
+  /* width: 70%; */
+  width: 100%;
   height: 100%;
+
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -634,4 +640,144 @@ html {
 
 .visually-hidden {
   display: none;
+}
+
+@media (max-width: 2000px) {
+  .h3-toys {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 1600px) {
+  .container {
+    margin: 0 auto;
+    width: 1300px;
+  }
+
+  .t-container {
+    height: calc(100vh - 120px);
+    display: grid;
+    grid-template-columns: 480px 840px;
+  }
+
+  .h3-toys {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 1350px) {
+  .container {
+    margin: 0 auto;
+    width: 1024px;
+  }
+
+  .header-wrap {
+    justify-content: space-around;
+  }
+
+  .header-banner {
+    display: none;
+  }
+
+  .t-container {
+    height: calc(100vh - 120px);
+    display: grid;
+    grid-template-columns: 420px 580px;
+  }
+
+  .filters {
+    padding-left: 20px;
+    /* background-color: rgba(155, 155, 255, 0.2); */
+  }
+
+  .toy-cards {
+    padding-left: 50px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .body {
+    min-height: 100vh;
+    display: grid;
+    /* grid-template-rows: 70px 1fr 50px; */
+    grid-template-rows: 140px auto 50px;
+  }
+
+  .container {
+    margin: 0 auto;
+    width: 750px;
+  }
+
+  .header-wrap {
+    min-height: 140px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .header-title {
+    margin-left: 0px;
+    margin-top: 10px;
+    color: #278d9f;
+    /* color: rgb(246, 62, 62); */
+    font-size: 40px;
+  }
+
+  .filters {
+    padding-left: 80px;
+    /* background-color: rgba(155, 155, 255, 0.2); */
+  }
+
+  .sort-filter {
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+
+  .toy-forms {
+    padding-left: 30px;
+  }
+
+  .t-container {
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 650px max-content;
+  }
+
+  .h3-toys {
+    margin-top: 15px;
+  }
+
+  .number-of-copies,
+  .year-of-purchase {
+    width: 70%;
+    /* padding-right: 50px; */
+  }
+
+  .favorites {
+    display: flex;
+    margin-top: 15px;
+    padding-left: 20px;
+  }
+
+  .setting-buttons {
+    /* height: 70px; */
+    padding-left: 180px;
+    padding-top: 20px;
+  }
+
+  .toy-cards {
+    height: auto;
+    min-height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 10px;
+    /* background-color: rgba(255, 155, 155, 0.2); */
+    overflow: visible;
+  }
+
+  /* .footer {
+    display: none;
+  } */
 }
