feat: Improve layout for tablets

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -721,25 +721,90 @@ html {
     font-size: 40px;
   }
 
-  .filters {
-    padding-left: 80px;
-    /* background-color: rgba(155, 155, 255, 0.2); */
-  }
-
-  .sort-filter {
-    padding-top: 20px;
-    padding-bottom: 30px;
-  }
-
-  .toy-forms {
-    padding-left: 30px;
-  }
-
   .t-container {
     height: auto;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 650px max-content;
+    grid-template-rows: 400px max-content;
+  }
+
+  .filters {
+    padding-left: 20px;
+    /* background-color: rgba(155, 155, 255, 0.2); */
+  }
+
+  .sort-filter {
+    padding-top: 10px;
+    padding-bottom: 30px;
+  }
+
+  .categories {
+    display: grid;
+    grid-template-columns: 400px 300px;
+    grid-template-areas:
+      'g1 g9'
+      'g2 g8'
+      'g3 g6'
+      'g4 g7'
+      'g5 g7';
+    grid-gap: 0px 30px;
+    overflow: hidden;
+  }
+
+  .grid-1 {
+    grid-area: g1;
+  }
+
+  .grid-2 {
+    grid-area: g2;
+  }
+
+  .grid-3 {
+    grid-area: g3;
+  }
+
+  .grid-4 {
+    grid-area: g4;
+  }
+
+  .grid-5 {
+    grid-area: g5;
+  }
+
+  .grid-6 {
+    grid-area: g6;
+  }
+
+  .grid-7 {
+    grid-area: g7;
+  }
+
+  .grid-8 {
+    grid-area: g8;
+  }
+
+  .grid-9 {
+    grid-area: g9;
+  }
+
+  .slider-year-counter-start {
+    padding-left: 0px;
+  }
+
+  .slider-year-counter-end {
+    padding-left: 20px;
+  }
+
+  .size-cont {
+    flex-direction: column;
+  }
+
+  .colors-cont {
+    padding-left: 0px;
+  }
+
+  .toy-forms {
+    padding-left: 0px;
   }
 
   .h3-toys {
@@ -748,8 +813,7 @@ html {
 
   .number-of-copies,
   .year-of-purchase {
-    width: 70%;
-    /* padding-right: 50px; */
+    width: 95%;
   }
 
   .favorites {
@@ -759,9 +823,9 @@ html {
   }
 
   .setting-buttons {
-    /* height: 70px; */
-    padding-left: 180px;
-    padding-top: 20px;
+    padding-left: 10px;
+    padding-top: 0px;
+    padding-bottom: 10px;
   }
 
   .toy-cards {
@@ -769,13 +833,9 @@ html {
     min-height: 400px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    /* gap: 20px; */
     padding: 10px;
     /* background-color: rgba(255, 155, 155, 0.2); */
     overflow: visible;
   }
-
-  /* .footer {
-    display: none;
-  } */
 }
