--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -546,6 +546,7 @@ html {
   font-weight: normal;
   font-size: 16px;
   line-height: 12px;
+  transition: all 1s;
 }
 
 .toy-card-item-elect {
@@ -559,24 +560,32 @@ html {
 .toy-card-item-elect::after {
   content: '';
   position: absolute;
-  /* background-image: url('../icons/star.png'); */
   background-image: url('../icons/basket1.png');
   background-size: 20px 20px;
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
-  top: 16px;
-  left: 10px;
+  bottom: 10px;
+  right: 10px;
+}
+
+.hidden-card {
+  transform: scale(0.95);
+  opacity: 0.8;
 }
 
 .toy-name {
-  margin-left: 30px;
-  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 40px;
   font-family: Neucha;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 20px;
+  letter-spacing: 1px;
 }
 
 .toy-image {
