--- a/css/basket.css
+++ b/css/basket.css
@@ -167,7 +167,7 @@
   opacity: 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (orientation: portrait) {
   .basket-cont {
     position: fixed;
   }
@@ -187,6 +187,6 @@
   }
 
   .user-selected-items {
-    height: 460px;
+    height: 650px;
   }
 }
